src/test/ui/bogus-tag.stderr
error[E0599]: no variant named `hsl` found for type `color` in the current scope
  --> $DIR/bogus-tag.rs:18:7
   |
LL | enum color { rgb(isize, isize, isize), rgba(isize, isize, isize, isize), }
   | ---------- variant `hsl` not found here
...
LL |       color::hsl(h, s, l) => { println!("hsl"); }
   |       ^^^^^^^^^^^^^^^^^^^ variant not found in `color`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
